gitops/java/petclinic/overlays/dev/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: petclinic
spec:
  host: app-petclinic-dev.apps.cluster-ottawa-e50c.ottawa-e50c.example.opentlc.com
status:
  ingress:
  - conditions:
    host: app-petclinic-dev.apps.cluster-ottawa-e50c.ottawa-e50c.example.opentlc.com
